frontend/src/responsiveness/media-queries.scss
@media screen and (max-width: 1290px) {
    .dashboard-container .main-wrapper {
        max-width: 100%;
    }
}

@media screen and (max-width: 1290px) {
    .dashboard-container .main-wrapper .main-grid-layout{
        flex-direction: column-reverse;
        .main-grid-left, .main-grid-right{
            width: 100%;
        }
        .main-grid-right{
            margin-bottom: 20px;
        }
    }
}

@media screen and (max-width: 768px) {
    header {
        flex-direction: column;
        align-items: flex-start;
        .brand h2{
            font-size: 35px;
            font-weight: bold;
        }
        span{
            display: inline-block;
            width: 100%;
            text-align: center;
        }
    }
    .header-controls{
        margin-top: 15px;
        font-size: 17px;
    }
    .ai-modal-overlay{
        width: 100%;
    }
    .ai-panel .ai-panel-content{
        padding: 30px 0px;
    }
}
@media screen and (max-width: 585px) {
    .chart-tabs{
        flex-wrap: wrap;
        button{
            min-width: 47%;
            padding: 15px 0px;
            font-size: 17px;
            display: flex;
            justify-content: center;
        }
    }
    .view-toggle-btn{
        display: none;
    }
}
@media screen and (max-width: 450px) {
    .chart-tabs{
        flex-wrap: wrap;
        button{
            min-width: 100%;
        }
    }
    #chart-capture-zone.chart-section{
        padding: 20px 10px 20px 0px;
    }
}

